;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.4.3:
  * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
    SYNONYM-STREAMs.
  * bug fix: (pathname-{device,directory,name,type} ... :case :common) works
    as expected. In particular MAKE-PATHNAME composed with the accessors
    roundtrips properly when both use the same :case. (lp#1739906)

changes in sbcl-1.4.3 relative to sbcl-1.4.2:
  * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
  * bug fix: DECODE-TIMEOUT and operators accepting a timeout no longer signal
    an error when called with an argument that is of type (real 0) but not
    (unsigned-byte 62) (lp#1727789)
  * bug fix: fixed heap exhaustion bug when consing millions of small objects
  * bug fix: sb-safepoint builds are now a lot less prone to deadlocks and odd
    crashes (lp#1424031, lp#1268710)
  * bug fix: argumentless CALL-NEXT-METHOD where specialized-to-T or
    unspecialized parameters are mutated now uses the original (non-mutated)
    parameter values (lp#1734771)
  * bug fix: memory faults from lisp no longer use (thread-and-interrupt
    unsafe) global storage for fault addresses (everywhere), and now have
    cleaner backtraces (on x86 and x86-64). (lp#309068)
  * bug fix: pathnames with a directory component of the form
    (:absolute {:up,:wild,:wild-inferiors}) no longer fail to unparse.
    (lp#1738775)
  * bug fix: more reliable signal handling on macOS.

changes in sbcl-1.4.2 relative to sbcl-1.4.1:
  * minor incompatible change: SB-EXT:QUIT is no longer marked as deprecated
    and behaves like SB-EXT:EXIT.
  * enhancement: ASDF updated to 3.3.1. The ASDF release is dedicated to
    the late Elias Pipping who put enormous amounts of work into it despite
    his terminal illness. Thank you and rest in peace.  (lp#1681201)
  * enhancement: alien routines compiled with '-fsanitize=thread' and/or
    '-fsanitize=memory' cause fewer false positives in error reporting.