@@ -6,6 +6,8 @@ changes relative to sbcl-1.4.3:
   * bug fix: (pathname-{device,directory,name,type} ... :case :common) works
     as expected. In particular MAKE-PATHNAME composed with the accessors
     roundtrips properly when both use the same :case. (lp#1739906)
+  * bug fix: DIRECTORY no longer gets confused when the value of
+    *DEFAULT-PATHNAME-DEFAULTS* has a name or type component. (lp#1740563)
 
 changes in sbcl-1.4.3 relative to sbcl-1.4.2:
   * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
